--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <p> test git project </p>
-    <p>test</p>
+    <p>
+        <div>
+            <ul>
+                <li>fsd</li>
+            </ul>
+        </div>
+    </p>
 </body>
 </html> 
